--- a/css/searchbox-exercises.003.css
+++ b/css/searchbox-exercises.003.css
@@ -47,14 +47,14 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV{
 	float: inherit;
 	width: 100%;
 	padding: 0;
-	height: 100px;
+	height: 70px;
 	}
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result{
 	display: none;
 	color: #000;
 	padding: 0;
 	position: absolute;
-	top: 90px;
+	top: 80px;
 	left: 0px;
 	right: 0px;	
 	border: 0px solid #ccc;	
@@ -69,7 +69,7 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-conten
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing{
 	list-style-type: none;
 	margin: 0;
-	padding: 20px;
+	padding: 20px 10px 10px;
 	display: flex;
     flex-flow: row wrap;
 	}
@@ -87,16 +87,18 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-conten
 	padding: 5px 10px;
 	background: none;
 	border-radius: 5px;
-	font-size: 120%;
+	font-size: 110%;
 	cursor: pointer;
 	color: #888;
 	text-transform: capitalize;	
 	width:100%;
 	}
 .search-box-squeeze DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
-		width: 33.3333333333%;
-		box-sizing: border-box;
-		}		
+	width: calc(50% - 10px);
+    box-sizing: border-box;
+    margin: 5px;
+    background-color: #eeeeee82;
+}		
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result:hover{
 	background: #333;
 	color: #fff;
@@ -108,10 +110,10 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-conten
 	color: #fff;
 	}	
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-msg{
-	padding: 0 12px 10px;
+	padding: 10px;
 	background: #fff;
 	border-radius: 0;
-	font-size: 160%;
+	font-size: 150%;
 	cursor: pointer;
 	color: #666;
 	margin:0;
@@ -119,27 +121,27 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-conten
 	width:100%;
 	}
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-title{
-	padding: 12px 12px;
-	background: #f0f0f0;
-	border-radius: 5px;
-	font-size: 125%;
-	cursor: pointer;
-	color: #666;
-	margin-bottom: 5px;
-	margin-top: 5px;
-	width:100%;
+	padding: 10px;
+    background: #2196f380;
+    border-radius: 5px;
+    font-size: 100%;
+    cursor: pointer;
+    color: #fff;
+    margin: 5px;
+    width: calc(100% - 10px);
+    font-weight: bold;
 	}	
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-hint{
 	padding: 5px 10px;
 	background: #eee;
 	border-radius: 5px;
-	font-size: 115%;
+	font-size: 100%;
 	cursor: pointer;
 	color: #009EFF;
-	margin: 3px 10px;
+	margin: 5px;
 	font-weight: normal;
 	text-transform: capitalize;	
-	width: calc(50% - 20px);
+	width: calc(50% - 10px);
     box-sizing: border-box;
 	}	
 DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV .input{
@@ -150,7 +152,7 @@ DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV .input{
 	right: 0;	
 	}
 DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT]{
-	padding:0 0 0 60px;	
+	padding:0 0 0 80px;	
 	position: relative;
 	float:inherit;
 	border:0;
@@ -163,7 +165,7 @@ DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT]{
 	font-size:250%;
 	text-transform: lowercase;
 	font-weight: 800;
-	height: 100px;	
+	height: 110px;	
 	opacity: 0.33;
 	}
 DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].input-bg::placeholder{
@@ -178,7 +180,7 @@ DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide{
 	background-image: url(../images/loupe-grey.png);
 	background-repeat: no-repeat;
 	background-position: 12px 50%;
-	background-size: 35px;
+	background-size: 56px;
 	}
 DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide::placeholder{
 	color:#ccc;
@@ -230,19 +232,17 @@ DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide::place
 	DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT] {
 		font-size: 150%;
 		background-size: 30px !important;
+		height:70px;
+		padding: 0 0 0 50px;
 		}
 	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result {
-		top:80px;
+		top:50px;
     	}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing {
-		padding: 10px;
-		}
 	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
 		font-size: 100%;
 		}
 	.search-box-squeeze DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
-		width: 50%;
-		box-sizing: border-box;
+		width: calc(50% - 10px);
 	}
 		
 	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-msg{
@@ -252,25 +252,8 @@ DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide::place
 	
 	
 @media(min-width:1024px) and (max-width:1279px){
-	DIV.widget-searchbox-exercises{
-		height: 152px;
-    	}
-	DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT]{
-		font-size:400%;
-		height: 152px;
-		padding:0 0 0 100px;	
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide{	
-		background-size: 70px;
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV{
-		height:152px;
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result {
-		top: 120px;
-    	}
 	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
-		font-size: 160%;
+		width: calc(33.3333333% - 10px) !important;
 	}
 
 
@@ -278,32 +261,25 @@ DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide::place
 	}
 	
 @media(min-width:1280px){
-	DIV.widget-searchbox-exercises{
-		height: 152px;
-    	}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV {
-		height:152px;
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result {
-		top: 120px;
-    	}
-	DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT] {
-		font-size:400%;
-		height: 152px;
-		padding:0 0 0 100px;	
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox INPUT[type=TEXT].translucide{	
-		background-size: 70px;
-		}
-	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV {
-		height:152px;
-		}
+	
 	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
-		font-size: 200%;
+		width: calc(25% - 10px) !important;
 	}
 		
 	}	
 	
+
+@media(min-width:1480px){
+
+	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+		width: calc(20% - 10px) !important;
+	}
+		
+	}
+
 @media(max-width:360px){
+	DIV.widget-searchbox-exercises DIV.searchbox DIV.kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+		width: calc(100% - 10px) !important;
+	}
 	}	
 		
