--- a/css/searchbox-exercises.003.css
+++ b/css/searchbox-exercises.003.css
@@ -6,35 +6,35 @@
 
 */
 
-.widget-searchbox-exercises{
-	float:left;
+.widget-searchbox-exercises {
+	float: left;
 	position: relative;
-	margin:0;
-	border-radius: 0;	
-	border:0;
-	}
-.widget-searchbox-exercises .nobg-fix{
+	margin: 0;
+	border-radius: 0;
+	border: 0;
+}
+.widget-searchbox-exercises .nobg-fix {
 	margin: 0;
 	padding: 0;
 	margin: 0;
 	padding: 0;
 	line-height: 0;
 	height: 0;
-	overflow:hidden;
-	}
-.widget-searchbox-exercises .nobg-fix > IMG{
-	height:1px;
-	width:100%;
-	}
+	overflow: hidden;
+}
+.widget-searchbox-exercises .nobg-fix > img {
+	height: 1px;
+	width: 100%;
+}
 
-.widget-searchbox-exercises .searchbox{
-	float:left;
-	margin:0;
-	margin-top:0px;
-	padding:0;
-	width:100%;
-	}	
-.widget-searchbox-exercises .searchbox .kw-searchbox{
+.widget-searchbox-exercises .searchbox {
+	float: left;
+	margin: 0;
+	margin-top: 0px;
+	padding: 0;
+	width: 100%;
+}
+.widget-searchbox-exercises .searchbox .kw-searchbox {
 	position: relative;
 	float: left;
 	padding: 0;
@@ -42,47 +42,75 @@
 	height: 100%;
 	width: 100%;
 	border: 0px solid #bbb;
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV{
+}
+.widget-searchbox-exercises .searchbox .kw-searchbox > div {
 	float: inherit;
 	width: 100%;
 	padding: 0;
 	height: 70px;
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result{
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result {
 	display: none;
 	color: #000;
 	padding: 0;
 	position: absolute;
 	top: 80px;
 	left: 0px;
-	right: 0px;	
-	border: 0px solid #ccc;	
+	right: 0px;
+	border: 0px solid #ccc;
 	border-radius: 0 0 10px 10px;
 	box-shadow: 0px 20px 30px -10px rgba(0, 0, 0, 0.25);
 	background: #fff none repeat scroll 0% 0%;
 	/*background: rgba(255, 255, 255, 0.90) none repeat scroll 0% 0%;*/
 	z-index: 10;
-	margin:0
-	}
+	margin: 0;
+}
 
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing{
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing {
 	list-style-type: none;
 	margin: 0;
 	padding: 20px 10px 10px;
 	display: flex;
-    flex-flow: row wrap;
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI{
+	flex-flow: row wrap;
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li {
 	text-align: left;
 	overflow: hidden;
 	padding: 0;
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI SPAN.hint{
-	color: #009EFF;
-	font-weight: bold;	
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li
+	span.hint {
+	color: #009eff;
+	font-weight: bold;
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result {
 	cursor: pointer;
 	padding: 5px 10px;
 	background: none;
@@ -90,50 +118,93 @@
 	font-size: 110%;
 	cursor: pointer;
 	color: #666;
-	text-transform: capitalize;	
-	width:100%;
-	}
-.search-box-squeeze .widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+	text-transform: capitalize;
+	width: 100%;
+}
+.search-box-squeeze
+	.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result {
 	width: calc(50% - 10px);
-    box-sizing: border-box;
-    margin: 5px;
-    background-color: #eeeeee82;
-}		
+	box-sizing: border-box;
+	margin: 5px;
+	background-color: #eeeeee82;
+}
 
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result.focus,	
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result:focus{
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result.focus,
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result:focus {
 	font-weight: normal !important;
 	background: #333;
 	color: #fff;
-	}	
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result:hover{
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result:hover {
 	background: #111;
 	color: #fff;
-	}	
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-msg{
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result-msg {
 	padding: 5px 10px;
-    background: #616161;
-    border-radius: 5px;
-    font-size: 100%;
-    cursor: pointer;
-    color: #eee;
-    margin: 5px;
-    font-weight: normal;
-    width: calc(100% - 10px);
-	}
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-title{
+	background: #616161;
+	border-radius: 5px;
+	font-size: 100%;
+	cursor: pointer;
+	color: #eee;
+	margin: 5px;
+	font-weight: normal;
+	width: calc(100% - 10px);
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-result-title {
 	padding: 5px 10px;
-    background: #616161;
-    border-radius: 5px;
-    font-size: 100%;
-    cursor: pointer;
-    color: #eee;
-    margin: 5px;
-    width: calc(100% - 10px);
-    font-weight: normal;
-    text-transform: capitalize;
-	}	
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-hint{
+	background: #616161;
+	border-radius: 5px;
+	font-size: 100%;
+	cursor: pointer;
+	color: #eee;
+	margin: 5px;
+	width: calc(100% - 10px);
+	font-weight: normal;
+	text-transform: capitalize;
+}
+.widget-searchbox-exercises
+	.searchbox
+	.kw-searchbox
+	> div
+	> .kw-content-result
+	ul.listing
+	li.single-hint {
 	padding: 5px 10px;
 	background-color: #eeeeee82;
 	border-radius: 5px;
@@ -142,146 +213,218 @@
 	color: #333;
 	margin: 5px;
 	font-weight: normal;
-	text-transform: capitalize;	
+	text-transform: capitalize;
 	width: calc(50% - 10px);
-    box-sizing: border-box;
-	}	
-.widget-searchbox-exercises .searchbox .kw-searchbox > DIV .input{
+	box-sizing: border-box;
+}
+.widget-searchbox-exercises .searchbox .kw-searchbox > div .input {
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
-	right: 0;	
-	}
-.widget-searchbox-exercises .searchbox INPUT[type=TEXT]{
-	padding:0 15px 0 80px;	
+	right: 0;
+}
+.widget-searchbox-exercises .searchbox input[type="TEXT"] {
+	padding: 0 15px 0 80px;
 	position: relative;
-	float:inherit;
-	border:0;
-	color:#666;
-	background:none;
-	outline-color: rgba(0, 0, 0, 0.0);
-	margin:0;
-	width:100%;
+	float: inherit;
+	border: 0;
+	color: #666;
+	background: none;
+	outline-color: rgba(0, 0, 0, 0);
+	margin: 0;
+	width: 100%;
 	margin-top: 0px;
-	font-size:250%;
+	font-size: 250%;
 	text-transform: lowercase;
 	font-weight: 800;
-	height: 110px;	
+	height: 110px;
 	opacity: 0.5;
-	}
-.widget-searchbox-exercises .searchbox INPUT[type=TEXT].input-bg::placeholder{
-	color:#2196F3;
 }
-.widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:focus{
-	outline-color: rgba(0, 0, 0, 0.0);
-	}
-.widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide{
-	border:0;	
-	opacity: 1.0;
+.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].input-bg::placeholder {
+	color: #2196f3;
+}
+.widget-searchbox-exercises .searchbox input[type="TEXT"].translucide:focus {
+	outline-color: rgba(0, 0, 0, 0);
+}
+.widget-searchbox-exercises .searchbox input[type="TEXT"].translucide {
+	border: 0;
+	opacity: 1;
 	background-image: url(../images/loupe-grey.png);
 	background-repeat: no-repeat;
 	background-position: 12px 50%;
 	background-size: 56px;
-	}
-.widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide::placeholder{
-	color:#ccc;
 }
-	
-/* les rows de widget avec fond dark ou light */
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT]{
-	color:#fff;
-	}
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide{
-	background-image: url(/images/default/loupe-white.png);
-	}
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT]{
-	color:#fff;
-	}
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide{
-	background-image: url(/images/default/loupe-black.png);
-	}	
+.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide::placeholder {
+	color: #ccc;
+}
 
-/* le place holder*/	
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide::-webkit-input-placeholder{
-	color:#fff;
-	}
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-moz-placeholder{
-	color:#fff;
-	}
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-ms-input-placeholder{
-	color:#fff;
-	}
-.search-box-dark .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-moz-placeholder{
-	color:#fff;
-	}
-	
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide::-webkit-input-placeholder{
-	color:#000;
-	}
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-moz-placeholder{
-	color:#000;
-	}
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-ms-input-placeholder{
-	color:#000;
-	}
-.search-box-light .widget-searchbox-exercises .searchbox INPUT[type=TEXT].translucide:-moz-placeholder{
-	color:#000;
-	}	
-	
-	
-@media(max-width:767px){
-	.widget-searchbox-exercises .searchbox INPUT[type=TEXT] {
+/* les rows de widget avec fond dark ou light */
+.search-box-dark .widget-searchbox-exercises .searchbox input[type="TEXT"] {
+	color: #fff;
+}
+.search-box-dark
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide {
+	background-image: url(/images/default/loupe-white.png);
+}
+.search-box-light .widget-searchbox-exercises .searchbox input[type="TEXT"] {
+	color: #fff;
+}
+.search-box-light
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide {
+	background-image: url(/images/default/loupe-black.png);
+}
+
+/* le place holder*/
+.search-box-dark
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide::-webkit-input-placeholder {
+	color: #fff;
+}
+.search-box-dark
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-moz-placeholder {
+	color: #fff;
+}
+.search-box-dark
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-ms-input-placeholder {
+	color: #fff;
+}
+.search-box-dark
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-moz-placeholder {
+	color: #fff;
+}
+
+.search-box-light
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide::-webkit-input-placeholder {
+	color: #000;
+}
+.search-box-light
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-moz-placeholder {
+	color: #000;
+}
+.search-box-light
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-ms-input-placeholder {
+	color: #000;
+}
+.search-box-light
+	.widget-searchbox-exercises
+	.searchbox
+	input[type="TEXT"].translucide:-moz-placeholder {
+	color: #000;
+}
+
+@media (max-width: 767px) {
+	.widget-searchbox-exercises .searchbox input[type="TEXT"] {
 		font-size: 150%;
 		background-size: 30px !important;
-		height:70px;
+		height: 70px;
 		padding: 0 15px 0 50px;
-		}
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result {
-		top:50px;
-    	}
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+	}
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result {
+		top: 50px;
+	}
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
 		font-size: 100%;
-		}
-	.search-box-squeeze .widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+	}
+	.search-box-squeeze
+		.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
 		width: calc(50% - 10px);
 	}
-		
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result-msg{
+
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result-msg {
 		font-size: 100%;
-		}	
 	}
-	
-	
-@media(min-width:1024px) and (max-width:1279px){
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
 		width: calc(33.3333333% - 10px) !important;
 	}
+}
 
-
-	
-	}
-	
-@media(min-width:1280px){
-	
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+@media (min-width: 1280px) {
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
 		width: calc(25% - 10px) !important;
 	}
-		
-	}	
-	
+}
 
-@media(min-width:1480px){
-
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
+@media (min-width: 1480px) {
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
 		width: calc(20% - 10px) !important;
 	}
-		
-	}
+}
 
-@media(max-width:360px){
-	.widget-searchbox-exercises .searchbox .kw-searchbox > DIV > .kw-content-result UL.listing LI.single-result{
-		width: calc(100% - 10px) !important;
+@media (max-width: 360px) {
+	.widget-searchbox-exercises
+		.searchbox
+		.kw-searchbox
+		> div
+		> .kw-content-result
+		ul.listing
+		li.single-result {
+		/* only if we DONT use jautocomplete.reorderRowsToColumns to seperate them in 2 columns */
+		/*width: calc(100% - 10px) !important;*/
+		width: calc(50% - 10px) !important;
 	}
-	}	
-		
+}
